--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         }
     });
     async function fetchApiData(numOfAdditions, numOfSubtractions, numberOfDigits) {
-        const apiUrl = `http://localhost:5000/problems?num_of_additions=${numOfAdditions}&num_of_subtractions=${numOfSubtractions}&number_of_digits=${numberOfDigits}`;
+        const apiUrl = `https://ip7nw0s528.execute-api.eu-west-1.amazonaws.com/default/problems?num_of_additions=${numOfAdditions}&num_of_subtractions=${numOfSubtractions}&number_of_digits=${numberOfDigits}`;
         try {
             const response = await fetch(apiUrl);
             if (!response.ok) {
