--- a/index.html
+++ b/index.html
@@ -353,7 +353,13 @@
     async function fetchApiData(numOfAdditions, numOfSubtractions, numberOfDigits) {
         const apiUrl = `https://ip7nw0s528.execute-api.eu-west-1.amazonaws.com/default/problems?num_of_additions=${numOfAdditions}&num_of_subtractions=${numOfSubtractions}&number_of_digits=${numberOfDigits}`;
         try {
-            const response = await fetch(apiUrl);
+            const response = await fetch(apiUrl, {
+            method: 'GET', 
+            headers: {
+                'Content-Type': 'application/json',  
+            },
+        });
+
             if (!response.ok) {
                 throw new Error('Network response was not ok ' + response.statusText);
             }
